sumo/tests/traci/StopNode/InvalidNode/net_state.traci
<?xml version="1.0"?>

<!-- generated on 07/15/08 11:47:47 by SUMO sumo Version dev-SVN-r5691
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>routes.rou.xml</route-files>
   </input>

   <output>
      <netstate-dump>netstate_dump.xml</netstate-dump>
   </output>

   <processing>
      <no-step-log>true</no-step-log>
   </processing>

   <traci_server>
      <remote-port>8824</remote-port>
      <penetration>1</penetration>
   </traci_server>

</configuration>
-->

<sumo-netstate>
   <timestep time="0">
      <edge id="e_m4">
         <lane id="e_m4_0">
            <vehicle id="veh0" pos="0.00" speed="0.00"/>
         </lane>
         <lane id="e_m4_1"/>
         <lane id="e_m4_2"/>
      </edge>
   </timestep>
   <timestep time="1">
      <edge id="e_m4">
         <lane id="e_m4_0">
            <vehicle id="veh0" pos="0.52" speed="0.52"/>
         </lane>
         <lane id="e_m4_1"/>
         <lane id="e_m4_2"/>
      </edge>
   </timestep>
</sumo-netstate>
